Add eslint and enzyme packages

--- a/BeeAppy/package.json
+++ b/BeeAppy/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme": "^2.8.2",
+    "eslint": "^4.0.0",
+    "eslint-plugin-react": "^7.1.0",
     "jest": "^20.0.4",
     "jest-expo": "~1.0.1",
     "react-native-scripts": "0.0.31",
