--- a/BeeAppy/package.json
+++ b/BeeAppy/package.json
@@ -8,8 +8,10 @@
     "eslint-plugin-react": "^7.1.0",
     "jest": "^20.0.4",
     "jest-expo": "~1.0.1",
+    "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^15.6.1",
     "react-native-scripts": "0.0.31",
-    "react-test-renderer": "16.0.0-alpha.6"
+    "react-test-renderer": "^16.0.0-alpha.6"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
