--- a/BeeAppy/package.json
+++ b/BeeAppy/package.json
@@ -20,7 +20,7 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "jest --watch"
   },
   "jest": {
     "preset": "react-native"
